--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.test.json"
+    "project": "./tsconfig.json"
   },
   "ignorePatterns": [
     "dist/"
