--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typegen-openapi",
-  "version": "0.1.10",
+  "version": "0.1.12",
   "description": "Generate type.d from openapi spec",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -11,9 +11,9 @@
     "access": "public"
   },
   "scripts": {
-    "lint": "npx eslint . --ext ts",
+    "lint": "npx eslint .",
     "test": "npx jest -c jest.config.js",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "clean": "rimraf dist",
     "prepublish": "npm run -s clean && npm run -s build"
   },
